Bug 1435212 - Add support for FFmpeg 4.0. r=bryce

MozReview-Commit-ID: JlDFSUyGQu